wellesleynet/roles/k8s/files/minio.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  serviceName: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - image: minio/minio:RELEASE.2020-09-17T04-49-20Z
        args:
        - server
        - /data
        imagePullPolicy: Always
        name: minio
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: minio
          mountPath: /data
      volumes:
      - name: minio
        persistentVolumeClaim:
          claimName: minio
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: minio
spec:
  selector:
    app: minio
  ports:
  - name: minio
    port: 9000
    protocol: TCP
    targetPort: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  rules:
  - host: minio.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: minio
            port:
              number: 9000
  tls:
  - hosts:
    - minio.kiski.co
    secretName: minio-kiski-co-tls
